--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <input
                   id="price"
                   class="form-control"
-                  placeholder="Nhập vào giá"
+                  placeholder="Nhập vào giá ($)"
                 />
                 <span id="tbPrice" class="text text-danger mt-2"></span>
               </div>
@@ -240,22 +240,24 @@
                 <input
                   id="screen"
                   class="form-control mt-3"
-                  placeholder="Màn hình"
+                  placeholder="Màn hình (inch)"
                 />
                 <span id="tbScreen" class="text text-danger mt-2"></span>
                 <input
                   id="backCamera"
                   class="form-control mt-3"
-                  placeholder="Camera sau"
+                  placeholder="Camera sau (mp)"
                 />
-                <span id="tbBackCamera" class="text text-danger mt-2"> </span>
+                <span id="tbBackCamera" class="text text-danger mt-2">
+                </span>
 
                 <input
                   id="frontCamera"
                   class="form-control mt-3"
-                  placeholder="Camera trước"
+                  placeholder="Camera trước (mp)"
                 />
-                <span id="tbFrontCamera" class="text text-danger mt-2"> </span>
+                <span id="tbFrontCamera" class="text text-danger mt-2">
+                </span>
 
                 <input
                   id="desc"
